--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 *{
     font-family: "Lexend", serif;  
@@ -17,23 +17,65 @@ nav.nav-container{
     margin: 20px;
     display: flex;
     border-radius: 20px;
-    padding: 20px;
+    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-shadow: 3px 3px 20px #0000000c;
 }
+.nav-left {
+    display: flex;
+    width: 100%;
+    padding-left: 10px;
+}
 .nav-left ul li{
     display: inline-block;
+    list-style: none;
+    margin-right: 20px;
 }
 .nav-left ul li a{
     font-size: 14px;
-    color: black;
+    color: rgb(0, 0, 0);
+}
+.nav-middle{
+    display: flex;
+    justify-content: center;
+}
+.nav-right{
+    display: flex;
+    width: 100%;
+    justify-content: right;
 }
 .nav-button{
-    padding: 20px;
+    padding: 18px 38px;
     border: none;
     border-radius: 15px;
+    border: 2px solid black;
     background-color: black;
     color: white;
+    transition: 0.2s ease-in-out;
+}
+.nav-button:hover{
+    cursor: pointer;
+    background-color: white;
+    color: black;
+}
+.home-card{
+    background-image:url("toronto_cityline.jpg");
+    background-size: cover;  
+    background-position: center;
+    max-width: 100%;
+    height: 41vw;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 20px;
+    display: flex;
+    justify-content:left;
+    align-items:end
+}
+.home-card h1{
+    color: white;
+    font-family: "Playfair Display", serif;
+    font-style: italic;
+    font-size: 150px;
 }
