--- a/style.css
+++ b/style.css
@@ -161,21 +161,17 @@ section.home h2{
 
 
 section.products{
-    display: grid;
-    grid-template-columns: 45% 55%;
-    column-gap: 8px;
-    row-gap: 2px;
+    display:flex;
 
     background-color: #fff;
     border-radius: 20px;
     margin: 20px;
     padding: 30px 30px 30px 50px;
 }
-.products-info{
-    grid-row-start: 1;
-    grid-row-end: 4;
+section.products .products-info{
+    width: 40%;
 }
-.products-info h2{
+section.products .products-info h2{
     color: black;
     font-family: "Red Hat Text", serif;
     font-size: 30px;
@@ -184,35 +180,45 @@ section.products{
     max-width:max-content;
     padding-bottom: 10px;;
 }
-.products-info p{
+section.products .products-info p{
     color: rgba(92, 92, 92, 0.943);
     font-family: "Red Hat Text", serif;
     font-weight: 500;
     font-size: 15px;
     max-width:max-content;
 }
-section.products div:nth-child(n+2){
+section.products .right-cards{
+    width: 60%;
+}
+section.products .right-cards > div{
     background-color: #f7f7f7;
     border-radius: 20px;
     margin-bottom: 5px;
     padding: 30px;
     width: 100%;
     display: flex;
+    flex-direction: column;
+}
+section.products .card-title{
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
-section.products div h3:nth-child(1){
+section.products .card-title h3{
     color: black;
     font-family: "Red Hat Text", serif;
     font-size: 22px;
     font-weight: 530;
     letter-spacing: -1px;
 }
-section.products div i:nth-child(2){
+section.products .right-cards div i{
     background-color: rgb(255, 255, 255); 
     color: rgb(68, 68, 68);
     padding: 12px 12px; 
     border-radius: 10px;
     font-size: 25px;
     line-height: 0;
+}
+section.products .expand-text{
+    margin-top: 6px;
 }
