--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ section.home{
     background-size: cover;  
     background-position: center;
     max-width: 100%;
-    height: 41vw;
+    height: 42vw;
     border-radius: 20px;
     padding: 20px;
     margin: 20px;
@@ -235,4 +235,14 @@ section.products .right-cards div i{
     padding: 0 18px;
     /* transition: max-height 0.2s ease-out; */
     background-color: #f1f1f1;   
+}
+.museum-photo{
+    background-image: url("assets/rom_night.jpg");
+    background-size:cover; 
+    background-position:0% 70%;
+    max-width: 100%;
+    height: 42vw;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 20px;
 }
