--- a/style.css
+++ b/style.css
@@ -311,7 +311,6 @@ section.highlights p{
     font-weight: 580;
     font-size: 15px;
     padding: 18px 38px;
-    border: none;
     border-radius: 15px;
     border: 2px solid rgb(212, 211, 211);
     background-color: white;
@@ -441,31 +440,59 @@ section.footer{
     display: flex;
     justify-content: space-between;
 }
-section.footer > div > h3{
+.footer-links{
+    background-color: aquamarine;
+    display: flex;
+    gap: 80px;
+    flex-grow: 2;
+}
+.contact-section{
+    background-color: aqua;
+    flex-grow: 1;
+    padding-left: 15px;
+    width: 33vh;
+}
+.footer-links div > h3, .contact-section > h3{
     color: black;
     font-family: "Red Hat Text", serif;
-    font-size: 22px;
+    font-size: 25px;
     font-weight: 530;
     letter-spacing: -1px;
     padding-top: 20px;
     padding-bottom: 10px;
 }
-section.footer > div > a > h5{
+.footer-links div > a > h5{
     color: rgba(92, 92, 92, 0.943);
     font-family: "Red Hat Text", serif;
-    font-weight: 500;
-    font-size: 12.5px;
-    padding-bottom: 4px;
+    font-weight: 450;
+    font-size: 18px;
+    padding-bottom: 3px;
+    letter-spacing: -0.5px;
 }
-/* section.footer .col1{
-    background-color: aqua;
+button.email{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 25px 20px;
+    border-radius: 15px;
+    border: 2px solid black;
+    background-color: black;
+    align-items: center;
+    color: white;
+    transition: 0.2s ease-in-out;
 }
-section.footer .col2{
-    background-color: aqua;
+button.email:hover{
+    cursor: pointer;
+    background-color: white;
+    color: black;
 }
-section.footer .col3{
-    background-color: aqua;
+button.email > h3{
+    font-family: "Red Hat Text", serif;
+    font-weight: 450;
+    font-size: 18px;
+    letter-spacing: -0.5;
 }
-section.footer .col4{
-    background-color: aqua;
-} */
+button.email > i{
+    font-size: 25px;
+    line-height: 0;
+}
