--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap');
 
 *{
-    font-family: "Lexend", serif;  
+    font-family: "Red Hat Text", serif;  
     padding: 0;
     margin: 0;
     text-decoration: none;
@@ -33,10 +33,15 @@ nav.container{
     list-style: none;
     margin-right: 20px;
 }
-.nav-left ul li a{
+.nav-left a{
     font-size: 14px;
+    font-weight: 600;
     color: rgb(0, 0, 0);
     transition: 0.2s ease-in-out;
+    border-bottom: 2px solid transparent;
+}
+.nav-left a:hover{
+    border-color: #000;
 }
 .nav-middle{
     display: flex;
@@ -49,6 +54,7 @@ nav.container{
 }
 .nav-button{
     padding: 18px 38px;
+    font-weight: 500;
     border: none;
     border-radius: 15px;
     border: 2px solid black;
@@ -134,7 +140,7 @@ section.home h2{
 .contact-us-button{
     padding: 18px 38px;
     font-size: 15px;
-    font-weight: 300;
+    font-weight: 400;
     margin-top: 18px;
     border: none;
     border-radius: 15px;
@@ -142,10 +148,12 @@ section.home h2{
     color: black;
     transition: 0.2s ease-in-out;
     width: 100%;
+    border: 2px solid white;
 }
 .contact-us-button:hover{
     cursor: pointer;
-    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.445);
+    color: white;
+    background-color: transparent;
 }
 
 
@@ -171,12 +179,12 @@ section.products{
     padding: 30px 30px 30px 50px;
 }
 section.products .products-info{
-    width: 40%;
+    width: 50%;
 }
 section.products .products-info h2{
     color: black;
     font-family: "Red Hat Text", serif;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 530;
     letter-spacing: -1px;
     max-width:max-content;
@@ -190,7 +198,7 @@ section.products .products-info p{
     max-width:max-content;
 }
 section.products .right-cards{
-    width: 60%;
+    width: 50%;
     position:relative; 
 }
 /* the button that toggles the text within */
@@ -207,8 +215,7 @@ button.card-title{
     padding: 30px;
     outline: none;
 }
-.content{
-    padding: 0 18px;
+.content-box{
     display: none;
     overflow: hidden;
     background-color: #f7f7f7;
@@ -217,6 +224,51 @@ button.card-title{
     padding: 30px;
     width: 100%;
 }
+.content{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content:space-between;
+    gap: 5px;
+    width: 100%;
+}
+button.box{
+    min-height: 130px;
+    cursor: pointer;
+    color: black;
+    background-color: white;
+    border: none;
+    padding: 16px 16px 16px 16px;
+    border-radius: 20px;
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+    width: 100%;
+    flex-direction: column;
+    text-align: left;
+    transition: all .1s linear;
+    
+}
+button.box i{
+    color: #fff;
+    font-size: 30px;
+}
+button.box span{
+    font-family: "Red Hat Text", serif;
+    font-size: 18px;
+    font-weight: 530;
+    letter-spacing: -1px;
+}
+button.box:hover{
+    background-color: black;
+    color: white;
+}
+/* button.box > h5{
+    color: black;
+    font-family: "Red Hat Text", serif;
+    font-size:18px;
+    font-weight: 530;
+    letter-spacing: -1px;
+} */
 section.products .card-title > h3{
     color: black;
     font-family: "Red Hat Text", serif;
@@ -288,7 +340,7 @@ section.highlights > div{
 section.highlights h2{
     color: black;
     font-family: "Red Hat Text", serif;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 530;
     letter-spacing: -1px;
     max-width:max-content;
